// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/BasicSegmentedPage should match snapshot with controlled 1`] = `
<body>
  <div>
    <div
      class="segmented-tabs-wrapper"
    >
      <div
        class="ant-row segmented-row-wrapper css-156vlto css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-segmented basic-segmented-wrapper css-192b3m1 css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item ant-segmented-item-selected"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="label1"
              >
                label1
              </div>
            </label>
            <label
              class="ant-segmented-item"
            >
              <input
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="label2"
              >
                label2
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        class="lazy-load-wrapper segmented-item-content lazy-load-wrapper-show css-952l0m"
      >
        test1-children
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/BasicSegmentedPage should match snapshot with no controlled 1`] = `
<body>
  <div>
    <div
      class="segmented-tabs-wrapper"
    >
      <div
        class="ant-row segmented-row-wrapper css-156vlto css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-segmented basic-segmented-wrapper css-192b3m1 css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-segmented-group"
          >
            <label
              class="ant-segmented-item ant-segmented-item-selected"
            >
              <input
                checked=""
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="label1"
              >
                label1
              </div>
            </label>
            <label
              class="ant-segmented-item"
            >
              <input
                class="ant-segmented-item-input"
                type="radio"
              />
              <div
                class="ant-segmented-item-label"
                title="label2"
              >
                label2
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        class="lazy-load-wrapper segmented-item-content lazy-load-wrapper-show css-952l0m"
      >
        test1-children
      </div>
    </div>
  </div>
</body>
`;

exports[`lib/BasicSegmentedPage should set default active key 1`] = `
<div>
  <div
    class="segmented-tabs-wrapper"
  >
    <div
      class="ant-row segmented-row-wrapper css-156vlto css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-segmented basic-segmented-wrapper css-192b3m1 css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-segmented-group"
        >
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="label1"
            >
              label1
            </div>
          </label>
          <label
            class="ant-segmented-item ant-segmented-item-selected"
          >
            <input
              checked=""
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="label2"
            >
              label2
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="lazy-load-wrapper segmented-item-content lazy-load-wrapper-show css-952l0m"
    >
      test2-children
    </div>
  </div>
</div>
`;
